@startuml

class Operation {
    private String operation;

    public Operation(); 
    public String getOperation();
    public void setOperation(String operation);
}

class OperationMathematique {
    private double resultat;

    public OperationMathematique();
    public void resoudre(String uneOperation) throws OperationException;
    public String toString();
} 

class Calculette {
    private int compteur;

    public Calculette();
    public void calculer(String operation);
    public String toString();
} 

class CalculetteSauvegarde {
    public CalculetteSauvegarde(int uneTaille);
    public void sauvegarder();
}

interface WindowListener {
}

interface ActionListener{
}

class JFrame {
}

class CalculetteSWING {
    private Calculette calculette;
    private JTextField tfOperation;
    private JTextArea taResultat;

    public CalculetteSWING();
    public void windowActivated(WindowEvent evt);
    public void windowDeactivated(WindowEvent evt);
    public void windowClosed(WindowEvent evt);
    public void windowClosing(WindowEvent evt);
    public void windowIconified(WindowEvent evt);
    public void windowDeiconified(WindowEvent evt);
    public void windowOpened(WindowEvent evt);
    public void actionPerformed(ActionEvent evt);
} 

class FichierTexte {
    private BufferedWriter fW;
    private BufferedReader fR;
    private char mode;

    public void ouvrir(String nomDuFichier, String s) throws IOException;
    public void fermer() throws IOException;
    public String lire() throws IOException;
    public void ecrire(String s) throws IOException;
}

Operation <|-down- OperationMathematique: Inheritance
Calculette "1" *-up- "*" OperationMathematique: operations
CalculetteSauvegarde "1" *-up- "1" FichierTexte: ft
Calculette <|-down- CalculetteSauvegarde: Inheritance
CalculetteSWING "1" *-up- "1" CalculetteSauvegarde: calculette
JFrame <|-down- CalculetteSWING: Inheritance
WindowListener <|-down- CalculetteSWING: Inheritance
ActionListener <|-down- CalculetteSWING: Inheritance

@enduml